# OctoPrint-BedCooldown

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  MANIFEST.in  Makefile  README.md  babel.cfg  pyproject.toml  setup.py  tox.ini
.forgejo/ISSUE_TEMPLATE/: bug_report.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  pre-commit.yml
.woodpecker/: pre-commit.yaml  tox.yaml
octoprint_bedcooldown/: __init__.py
octoprint_bedcooldown/static/css/: bedcooldown.css
octoprint_bedcooldown/static/js/: bedcooldown.js
octoprint_bedcooldown/templates/: bedcooldown_settings.jinja2
octoprint_bedcooldown/tests/: test_octoprint_bedcooldown.py
octoprint_bedcooldown/translations/: README.txt  README.txt.license
