[project]
name = "OctoPrint-BedCooldown"
version = "0.6.3"
description = "Turns off the bed heater toward the end of a print"
authors = [
    { name = "Ryan Finnie", email = "ryan@finnie.org" },
]
requires-python = ">=3,<4"
license = "MPL-2.0"
dependencies = [
    "OctoPrint",
]

[project.entry-points."octoprint.plugin"]
bedcooldown = "octoprint_bedcooldown"

[tool.setuptools.packages.find]
include = [
    "octoprint_bedcooldown",
    "octoprint_bedcooldown.tests",
]

[project.urls]
Homepage = "https://github.com/rfinnie/OctoPrint-BedCooldown"

[tool.black]
line-length = 132

# https://pypi.org/project/Flake8-pyproject/
[tool.flake8]
max-line-length = 132
