# SPDX-PackageName: Octoprint-BedCooldown
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/Octoprint-BedCooldown
# SPDX-FileComment: pyproject configs
# SPDX-FileCopyrightText: © 2025 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0
[project]
name = "OctoPrint-BedCooldown"
version = "0.6.3"
description = "Turns off the bed heater toward the end of a print"
authors = [
    { name = "Ryan Finnie", email = "ryan@finnie.org" },
]
requires-python = ">=3,<4"
license = "MPL-2.0"
dependencies = [
    "OctoPrint",
]

[project.entry-points."octoprint.plugin"]
bedcooldown = "octoprint_bedcooldown"

[tool.setuptools.packages.find]
include = [
    "octoprint_bedcooldown",
    "octoprint_bedcooldown.tests",
]

[project.urls]
Homepage = "https://github.com/rfinnie/OctoPrint-BedCooldown"

[tool.black]
line-length = 132
