# SPDX-PackageName: Octoprint-BedCooldown
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://codeberg.org/rfinnie/Octoprint-BedCooldown
# SPDX-FileComment: pyproject configs
# SPDX-FileCopyrightText: © 2025 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0
[project]
name = "OctoPrint-BedCooldown"
version = "0.8.0"
description = "Turns off the bed heater toward the end of a print"
authors = [
    { name = "Ryan Finnie", email = "ryan@finnie.org" },
]
requires-python = ">=3,<4"
dynamic = [
    "license",
]
dependencies = [
    "OctoPrint",
    "packaging",
    "requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."octoprint.plugin"]
bedcooldown = "octoprint_bedcooldown"

[tool.setuptools.packages.find]
include = [
    "octoprint_bedcooldown",
    "octoprint_bedcooldown.tests",
]

[project.urls]
Homepage = "https://codeberg.org/rfinnie/OctoPrint-BedCooldown"

[tool.black]
line-length = 132
